--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "clint": "0.0.6",
     "elements": "^0.5.0",
     "jsdom": "^1.0.0-pre.6",
-    "escodegen": "*"
+    "escodegen": "*",
+    "esprima": "*",
+    "esmangle": "*",
+    "clean-css": "*"
   },
   "devDependencies": {},
   "scripts": {
